저글링 게임 추가

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <span class="game-icon">🎨</span>
           <span class="game-name">컬러 메모리</span>
         </li>
-        <li class="game-item" data-game="balance">
+        <li class="game-item" data-game="juggling">
           <span class="game-icon">⚖️</span>
-          <span class="game-name">에너지 밸런스</span>
+          <span class="game-name">저글링 게임</span>
         </li>
         <li class="game-item" data-game="rhythm">
           <span class="game-icon">🎵</span>
@@ -121,7 +121,7 @@
       <!-- 게임 컨테이너들 -->
       <div class="game-container" id="cuttingGame"></div>
       <div class="game-container" id="memoryGame"></div>
-      <div class="game-container" id="balanceGame"></div>
+      <div class="game-container" id="jugglingGame"></div>
       <div class="game-container" id="rhythmGame"></div>
       <div class="game-container" id="puzzleGame"></div>
     </main>
