--- a/games/juggling.html
+++ b/games/juggling.html
@@ -45,7 +45,7 @@
         <button class="control-btn" id="startBtn">게임 시작</button>
 
         <div class="instructions">
-          아이템을 마우스로 클릭하거나 스페이스바를 눌러 튕겨 올리세요<br />
+          막대기 위치를 조정해서 공을 튕겨보세요<br />
           아이템이 바닥에 닿지 않도록 오래 유지하세요<br />
           마우스나 방향키로 패들을 이동할 수 있습니다
         </div>
