--- a/games/juggling.html
+++ b/games/juggling.html
@@ -33,7 +33,7 @@
 
           <div class="game-over" id="gameOver">
             <h2>게임 오버!</h2>
-            <p>기록: <span id="finalTime">0.00s</span></p>
+            <p>현재 기록: <span id="finalTime">0.00s</span></p>
             <p>아이템 수: <span id="finalItemCount">1</span></p>
             <p class="best-score">
               최고 기록: <span id="finalBestTime">0.00s</span>
