버튼명 변경

--- a/games/mashing.html
+++ b/games/mashing.html
@@ -29,7 +29,7 @@
         <div class="rectangle-container" id="gameArea">
           <div class="smash-area">
             <div class="smash-target" id="smashTarget">
-              BASHI!<br />
+              CLICK!<br />
               <small style="font-size: 1rem; opacity: 0.9"
                 >여기를 연타하세요!</small
               >
