--- a/games/mashing.html
+++ b/games/mashing.html
@@ -31,7 +31,7 @@
             <div class="smash-target" id="smashTarget">
               CLICK!<br />
               <small style="font-size: 1rem; opacity: 0.9"
-                >여기를 연타하세요!</small
+                >여기를 클릭하세요!</small
               >
             </div>
 
