--- a/games/mashing.html
+++ b/games/mashing.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>버튼 연타 게임</title>
+    <title>버튼 클릭 게임</title>
   </head>
   <body>
     <div id="app">
