--- a/games/mashing.html
+++ b/games/mashing.html
@@ -58,7 +58,7 @@
         <button class="control-btn" id="startBtn">게임 시작</button>
 
         <div class="instructions">
-          10초 동안 버튼을 최대한 많이 눌러보세요!<br />
+          10초 동안 버튼을 최대한 많이 클릭하세요!<br />
           빠르게 연타할수록 높은 점수를 얻을 수 있습니다!
         </div>
       </div>
