--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>미니게임 천국</title>
+    <title>미니게임 모음</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
