--- a/games/juggling.html
+++ b/games/juggling.html
@@ -47,7 +47,7 @@
         <div class="instructions">
           막대기 위치를 조정해서 공을 튕겨보세요<br />
           공이 바닥에 닿지 않도록 오래 유지하세요<br />
-          마우스나 방향키로 막대를 이동할 수 있습니다
+          마우스나 방향키로 막대를 이동하세요
         </div>
       </div>
     </div>
