--- a/games/cutting.html
+++ b/games/cutting.html
@@ -47,7 +47,7 @@
         <div class="instructions">
           초록색 영역이 남은 부분입니다!<br />
           진한 초록 선이 원하는 위치에 왔을 때 자르기 버튼을 누르세요!<br />
-          더 작은 부분만 남고 나머지는 사라집니다
+          더 작은 부분만 남고 나머지는 사라집니다!
         </div>
       </div>
     </div>
