--- a/games/mashing.html
+++ b/games/mashing.html
@@ -59,7 +59,7 @@
 
         <div class="instructions">
           10초 동안 버튼을 최대한 많이 클릭하세요!!<br />
-          빠르게 클릭할수록 높은 점수를 얻을 수 있어요!!
+          빠르게 클릭할수록 높은 점수를 얻을 수 있어요!!!
         </div>
       </div>
     </div>
